# aw-filament

./: .gitmodules  README.md  aw-filament-extra-bindings.asd  aw-filament-imgui-bindings.asd  aw-filament-runtime-bindings.asd  aw-filament-tools-bindings.asd  aw-filament-ui-bindings.asd  aw-filament-util-bindings.asd  aw-filament.asd  claw-filament-runtime-bindings.asd  claw-filament-util-bindings.asd  claw-filament.asd
.github/workflows/: build.yaml
bindings/extra/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-w64-mingw32.lisp
bindings/imgui/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
bindings/runtime/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
bindings/tools/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
bindings/ui/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp
bindings/util/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp
src/: claw.extra.lisp  claw.lisp  claw.runtime.lisp  claw.tools.lisp  claw.ui.lisp  runtime.claw.lisp  setup.lisp  util.claw.lisp
src/lib/: .gitignore  CMakeLists.txt  ClawMemIo.h  ClawUtil.h  adapter.aarch64-linux-android.cxx  adapter.c  adapter.cxx  adapter.x86_64-pc-linux-gnu.cxx  build.ps1  build.sh  materials.h  util-adapter.aarch64-linux-android.cxx  util-adapter.cxx  util-adapter.x86_64-pc-linux-gnu.cxx
src/lib/adapter/imgui/: adapter.aarch64-linux-android.cxx  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-pc-windows-gnu.cxx  adapter.x86_64-w64-mingw32.cxx
src/lib/adapter/pixel-format/: pixel_format.c  pixel_format.h  pixel_format_win.c
src/lib/adapter/runtime/: adapter.aarch64-linux-android.cxx  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-pc-windows-gnu.cxx  adapter.x86_64-w64-mingw32.cxx
src/lib/adapter/runtime-utils/: AwRuntimeUtils.cpp  AwRuntimeUtils.h
src/lib/adapter/tool-utils/: AwMemIo.h  AwToolUtils.cpp  AwToolUtils.h
src/lib/adapter/tools/: adapter.aarch64-linux-android.cxx  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-pc-windows-gnu.cxx  adapter.x86_64-w64-mingw32.cxx
src/lib/adapter/ui/: adapter.aarch64-linux-android.cxx  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-pc-windows-gnu.cxx
